-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22
-
Component/s: hotspot
-
b03
-
generic
-
linux
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8323661 | 22.0.1 | Matthias Baesken | P4 | Resolved | Fixed | b02 |
| JDK-8324119 | 21.0.3 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8325718 | 17.0.11 | Matthias Baesken | P4 | Resolved | Fixed | b03 |
- backported by
-
JDK-8323661 os::Linux::print_system_memory_info enhance the THP output with /sys/kernel/mm/transparent_hugepage/hpage_pmd_size
-
- Resolved
-
-
JDK-8324119 os::Linux::print_system_memory_info enhance the THP output with /sys/kernel/mm/transparent_hugepage/hpage_pmd_size
-
- Resolved
-
-
JDK-8325718 os::Linux::print_system_memory_info enhance the THP output with /sys/kernel/mm/transparent_hugepage/hpage_pmd_size
-
- Resolved
-
- relates to
-
JDK-8323331 fix typo hpage_pdm_size
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/77b15bb9
-
Commit
openjdk/jdk21u-dev/419e0168
-
Commit
openjdk/jdk22u/3257d9db
-
Commit
openjdk/jdk/b31454e3
-
Review
openjdk/jdk17u-dev/2200
-
Review
openjdk/jdk21u-dev/181
-
Review
openjdk/jdk22u/11
-
Review
openjdk/jdk/17111