8322098: os::Linux::print_system_memory_info enhance the THP output with /sys/kernel/mm/transparent_hugepage/hpage_pmd_size 8323331: fix typo hpage_pdm_size

Backport-of: 419e01685b36aeccc47f52594a2026ccb2dcebb3